Añadir lista de participantes a las actividades y mejorar estilos de presentación

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,7 +16,7 @@
       <section id="activities-container">
         <h3>Available Activities</h3>
         <div id="activities-list">
-          <!-- Activities will be loaded here -->
+          <!-- Aquí se mostrarán las actividades y la lista de participantes -->
           <p>Loading activities...</p>
         </div>
       </section>
